--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,4 +60,5 @@ dependencies {
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
     implementation "com.squareup.okhttp3:okhttp:4.9.3"
+    implementation "com.google.accompanist:accompanist-systemuicontroller:0.24.5-alpha"
 }
